--- a/templates/default.phtml
+++ b/templates/default.phtml
@@ -12,6 +12,7 @@
     <link href="css/default.css" rel="stylesheet" type="text/css">
   </head>
   <body class="default">
+    <a href="https://github.com/UseCue/InvoiceLion"><img width="149" height="149" src="img/forkme_right_red_aa0000.png" alt="Fork me on GitHub" style="position: absolute; top:0; right:0; z-index:1000;"></a>
     <div class="main">
 
       <div class="content">
