--- a/templates/default.phtml
+++ b/templates/default.phtml
@@ -12,7 +12,7 @@
     <link href="css/default.css" rel="stylesheet" type="text/css">
   </head>
   <body class="default">
-    <img width="175.604" height="178.229" src="img/forkmeongithubribbon.svg" alt="Fork me on GitHub" style="position: absolute; top:0; right:0; z-index:1000;">
+    <a href="https://github.com/UseCue/InvoiceLion"><img width="175.604" height="178.229" src="img/forkmeongithubribbon.svg" alt="Fork me on GitHub" style="position: absolute; top:0; right:0; z-index:1000;"></a>
     <div class="main">
 
       <div class="content">
