--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -18,7 +18,7 @@
         <?php foreach ($flash as $type=>$text): ?> 
           <div class="alert alert-<?php e($type); ?>">
             <button type="button" class="close">x</button>
-            <div>
+            <div class="message">
               <?php e($text); ?>
             </div>
           </div>
