--- a/pages/auth/register(default).phtml
+++ b/pages/auth/register(default).phtml
@@ -1,12 +1,13 @@
 <?php Buffer::set('title','Register'); ?>
 <h1>Register</h1>
-<p>Create your own InvoiceLion account. Enter your credentials below.</p>
-<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div><?php e($error); ?></div></div><?php endif; ?>
+<p>Create your own InvoiceLion account.</p>
+<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
-    <div class="form-group">
-        <label class="control-label" for="username">Username (enter your email address)</label>
-        <input class="form-control" id="username" type="text" name="username" />
-    </div>
+    <div class="form-group <?php e(isset($errors['username'])?'has-error':''); ?>">
+		<label class="control-label" for="username">Email</label>
+		<input class="form-control" name="username" type="email" value="<?php e($data['username']); ?>" id="username" />
+		<span class="help-block"><?php if (isset($errors['username'])) e($errors['username']); ?></span>
+	</div>
     <div class="form-group">
         <button class="btn btn-primary" type="submit">Submit</button>
     </div>
