--- a/pages/customers/edit(admin).phtml
+++ b/pages/customers/edit(admin).phtml
@@ -2,7 +2,7 @@
 <div class="page-header">
   <h1>Edit customers</h1>
 </div>
-<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div><?php e($error); ?></div></div><?php endif; ?>
+<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
   
 	<div class="form-group <?php e(isset($errors['customers[name]'])?'has-error':''); ?>">
