--- a/pages/invoicelines/edit(admin).phtml
+++ b/pages/invoicelines/edit(admin).phtml
@@ -2,7 +2,7 @@
 	<h2><a href="/">Home</a> / <a href="invoicelines">Invoicelines</a></h2>
   	<h1><?php e($data['invoicelines']['name']); ?></h1>
 </div>
-<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div><?php e($error); ?></div></div><?php endif; ?>
+<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
 
 	<div class="form-group <?php e(isset($errors['invoicelines[customer_id]'])?'has-error':''); ?>">
