--- a/pages/subscriptionperiods/add(admin).phtml
+++ b/pages/subscriptionperiods/add(admin).phtml
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1>New abonnementperiode</h1>
 </div>
-<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div><?php e($error); ?></div></div><?php endif; ?>
+<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
   
 	<div class="form-group <?php e(isset($errors['subscriptionperiods[from]'])?'has-error':''); ?>">
