--- a/pages/tenants/edit(admin).phtml
+++ b/pages/tenants/edit(admin).phtml
@@ -2,7 +2,7 @@
 <h2>Home</h2>
 <h1>Edit settings</h1>
 
-<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div><?php e($error); ?></div></div><?php endif; ?>
+<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
 
     <div class="form-group <?php e(isset($errors['tenants[hours_active]'])?'has-error':''); ?>">
