--- a/pages/auth/forgotten(default).phtml
+++ b/pages/auth/forgotten(default).phtml
@@ -1,6 +1,7 @@
 <?php Buffer::set('title','Password forgotten'); ?>
 <h1>Password forgotten</h1>
 <p>No worries! Just enter your e-mail below and we will send you a password reset link.</p>
+<?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
     <div class="form-group <?php e(isset($errors['username'])?'has-error':''); ?>">
 		<label class="control-label" for="username">Email</label>
