--- a/pages/subscriptions/add(admin).phtml
+++ b/pages/subscriptions/add(admin).phtml
@@ -6,18 +6,20 @@
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
   
-	<?php if($projects) { ?>
-	<div class="form-group <?php e(isset($errors['subscriptions[project_id]'])?'has-error':''); ?>">
-		<label class="control-label" for="subscriptions[project_id]">Project</label>
-		<select class="form-control" name="subscriptions[project_id]" id="subscriptions[project_id]" onchange="document.getElementById('subscriptions[customer_id]').value = this.options[this.selectedIndex].getAttribute('customer-value');">
-			<option value=""<?php e(''==$data['subscriptions']['project_id']?' selected="selected"':''); ?>></option>
-			<?php foreach ($projects as $project): ?>
-			<option value="<?php e($project['projects']['id']); ?>" customer-value="<?php e($project['projects']['customer_id']); ?>"<?php e($project['projects']['id']==$data['subscriptions']['project_id']?' selected="selected"':''); ?>><?php e($project['projects']['name']); ?></option>
-			<?php endforeach; ?>
-		</select>
-		<span class="help-block"><?php if (isset($errors['subscriptions[project_id]'])) e($errors['subscriptions[project_id]']); ?></span>
-	</div>
-	<?php } ?>
+	<?php if(count($projects)>0): ?>
+		<div class="form-group <?php e(isset($errors['subscriptions[project_id]'])?'has-error':''); ?>">
+			<label class="control-label" for="subscriptions[project_id]">Project</label>
+			<select class="form-control" name="subscriptions[project_id]" id="subscriptions[project_id]" onchange="document.getElementById('subscriptions[customer_id]').value = this.options[this.selectedIndex].getAttribute('customer-value');">
+				<option value=""<?php e(''==$data['subscriptions']['project_id']?' selected="selected"':''); ?>></option>
+				<?php foreach ($projects as $project): ?>
+				<option value="<?php e($project['projects']['id']); ?>" customer-value="<?php e($project['projects']['customer_id']); ?>"<?php e($project['projects']['id']==$data['subscriptions']['project_id']?' selected="selected"':''); ?>><?php e($project['projects']['name']); ?></option>
+				<?php endforeach; ?>
+			</select>
+			<span class="help-block"><?php if (isset($errors['subscriptions[project_id]'])) e($errors['subscriptions[project_id]']); ?></span>
+		</div>
+	<?php else: ?>
+		<input name="subscriptions[project_id]" type="hidden" value="" />
+	<?php endif; ?>
 
 	<div class="form-group <?php e(isset($errors['subscriptions[customer_id]'])?'has-error':''); ?>">
 		<label class="control-label" for="subscriptions[customer_id]">Customer <a onclick="this.parentNode.nextElementSibling.selectedIndex = 0; this.parentNode.parentNode.nextElementSibling.style.display = 'block'; this.parentNode.parentNode.style.display = 'none'; document.getElementById('subscriptions[add_customer]').focus();">add</a></label>
