--- a/pages/deliveries/edit(admin).phtml
+++ b/pages/deliveries/edit(admin).phtml
@@ -4,16 +4,21 @@
 </div>
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
-	<div class="form-group <?php e(isset($errors['deliveries[project_id]'])?'has-error':''); ?>">
-		<label class="control-label" for="deliveries[project_id]">Project</label>
-		<select class="form-control" name="deliveries[project_id]" id="deliveries[project_id]" onchange="document.getElementById('deliveries[customer_id]').value = this.options[this.selectedIndex].getAttribute('customer-value');">
-			<option value=""<?php e(''==$data['deliveries']['project_id']?' selected="selected"':''); ?>></option>
-			<?php foreach ($projects as $project): ?>
-			<option value="<?php e($project['projects']['id']); ?>" customer-value="<?php e($project['projects']['customer_id']); ?>"<?php e($project['projects']['id']==$data['deliveries']['project_id']?' selected="selected"':''); ?>><?php e($project['projects']['name']); ?></option>
-			<?php endforeach; ?>
-		</select>
-		<span class="help-block"><?php if (isset($errors['deliveries[project_id]'])) e($errors['deliveries[project_id]']); ?></span>
-	</div>
+
+	<?php if(count($projects)>0): ?>
+		<div class="form-group <?php e(isset($errors['deliveries[project_id]'])?'has-error':''); ?>">
+			<label class="control-label" for="deliveries[project_id]">Project</label>
+			<select class="form-control" name="deliveries[project_id]" id="deliveries[project_id]" onchange="document.getElementById('deliveries[customer_id]').value = this.options[this.selectedIndex].getAttribute('customer-value');">
+				<option value=""<?php e(''==$data['deliveries']['project_id']?' selected="selected"':''); ?>></option>
+				<?php foreach ($projects as $project): ?>
+				<option value="<?php e($project['projects']['id']); ?>" customer-value="<?php e($project['projects']['customer_id']); ?>"<?php e($project['projects']['id']==$data['deliveries']['project_id']?' selected="selected"':''); ?>><?php e($project['projects']['name']); ?></option>
+				<?php endforeach; ?>
+			</select>
+			<span class="help-block"><?php if (isset($errors['deliveries[project_id]'])) e($errors['deliveries[project_id]']); ?></span>
+		</div>
+	<?php else: ?>
+		<input name="deliveries[project_id]" type="hidden" value="" />
+	<?php endif; ?>
 
 	<div class="form-group <?php e(isset($errors['deliveries[customer_id]'])?'has-error':''); ?>">
 		<label class="control-label" for="deliveries[customer_id]">Customer</label>
