--- a/pages/hours/edit(admin).phtml
+++ b/pages/hours/edit(admin).phtml
@@ -61,18 +61,20 @@
 		<span class="help-block"><?php if (isset($errors['hours[name]'])) e($errors['hours[name]']); ?></span>
 	</div>
 
-	<?php if($hourtypes) { ?>
-	<div class="form-group <?php e(isset($errors['hours[type]'])?'has-error':''); ?>">
-		<label class="control-label" for="hours[type]">Hour type</label>
-		<select class="form-control" name="hours[type]" id="hours[type]">
-			<option value=""<?php e(''==$data['hours']['type']?' selected="selected"':''); ?>></option>
-			<?php foreach ($hourtypes as $key => $value): ?>
-			<option value="<?php e($key); ?>"<?php e((($key==$data['hours']['type']) || (!$data['hours']['type'] && $value=='Productie'))?' selected="selected"':''); ?>><?php e($value); ?></option>
-			<?php endforeach; ?>
-		</select>
-		<span class="help-block"><?php if (isset($errors['hours[type]'])) e($errors['hours[type]']); ?></span>
-	</div>
-	<?php } ?>
+	<?php if(count($hourtypes)>0): ?>
+		<div class="form-group <?php e(isset($errors['hours[type]'])?'has-error':''); ?>">
+			<label class="control-label" for="hours[type]">Hour type</label>
+			<select class="form-control" name="hours[type]" id="hours[type]">
+				<option value=""<?php e(''==$data['hours']['type']?' selected="selected"':''); ?>></option>
+				<?php foreach ($hourtypes as $key => $value): ?>
+				<option value="<?php e($key); ?>"<?php e((($key==$data['hours']['type']) || (!$data['hours']['type'] && $value=='Productie'))?' selected="selected"':''); ?>><?php e($value); ?></option>
+				<?php endforeach; ?>
+			</select>
+			<span class="help-block"><?php if (isset($errors['hours[type]'])) e($errors['hours[type]']); ?></span>
+		</div>
+	<?php else: ?>
+		<input name="hours[type]" type="hidden" value="" />
+	<?php endif; ?>
   
 	<div class="form-group <?php e(isset($errors['hours[comment]'])?'has-error':''); ?>">
 		<label class="control-label" for="hours[comment]">Comment</label>
