--- a/pages/deliveries/index(admin).phtml
+++ b/pages/deliveries/index(admin).phtml
@@ -1,6 +1,6 @@
 <?php Buffer::set('title','deliveries'); ?>
 <h2><a href="/">Home</a></h2>
-<h1>Deliveries <a href="deliveries/add" class="btn-primary">Add deliveries</a></h1>
+<h1>Deliveries <a href="deliveries/add" class="btn-primary">Add delivery</a></h1>
 <table class="table responsive-minimal">
   <thead>
     <tr>
@@ -22,4 +22,4 @@
   </tbody>
 </table>
 
-<p><a class="btn-primary" href="deliveries/add">Add deliveries</a></p>
+<p><a class="btn-primary" href="deliveries/add">Add delivery</a></p>
