--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -37,7 +37,8 @@
           <a href="invoicelines"><span>Invoicelines</span></a><br />          
           <a href="customers"><span>Customers</span></a><br />
           <a href="projects"><span>Projects</span></a><br />
-          <a href="tenants/view/<?php e($_SESSION['user']['tenant_id']); ?>"><span>Settings</span></a><br />
+          <a href="tenants/view"><span>Settings</span></a><br />
+          <a href="tenants/check"><span>Integrity</span></a><br />
         </div>
 
       </div>
