--- a/pages/invoices/edit(admin).phtml
+++ b/pages/invoices/edit(admin).phtml
@@ -8,7 +8,7 @@
   
 	<div class="form-group <?php e(isset($errors['invoices[number]'])?'has-error':''); ?>">
 		<label class="control-label" for="invoices[number]">Number</label>
-		<input class="form-control" name="invoices[number]" type="number" value="<?php e($data['invoices']['number']); ?>" id="invoices[number]" disabled />
+		<input class="form-control" name="invoices[number]" type="number" value="<?php e($invoice['invoices']['number']); ?>" id="invoices[number]" disabled />
 		<span class="help-block"><?php if (isset($errors['invoices[number]'])) e($errors['invoices[number]']); ?></span>
 	</div>
   
@@ -29,36 +29,47 @@
 		<input class="form-control" name="invoices[sent]" type="checkbox" <?php if($data['invoices']['sent']) e('checked'); ?> id="invoices[sent]" value="1" />
 		<span class="help-block"><?php if (isset($errors['invoices[sent]'])) e($errors['invoices[sent]']); ?></span>
 	</div>
-  
-	<div class="form-group <?php e(isset($errors['invoices[paid]'])?'has-error':''); ?>">
-		<label class="control-label" for="invoices[paid]">Paid</label>
-		<input class="form-control" name="invoices[paid]" type="checkbox" <?php if($data['invoices']['paid']) e('checked'); ?> id="invoices[paid]" value="1" />
-		<span class="help-block"><?php if (isset($errors['invoices[paid]'])) e($errors['invoices[paid]']); ?></span>
-	</div>
-  
-	<div class="form-group <?php e(isset($errors['invoices[reminder1]'])?'has-error':''); ?>">
-		<label class="control-label" for="invoices[reminder1]">First reminder</label>
-		<input class="form-control" name="invoices[reminder1]" type="date" value="<?php e($data['invoices']['reminder1']); ?>" id="invoices[reminder1]" />
-		<span class="help-block"><?php if (isset($errors['invoices[reminder1]'])) e($errors['invoices[reminder1]']); ?></span>
-	</div>
-  
-	<div class="form-group <?php e(isset($errors['invoices[reminder2]'])?'has-error':''); ?>">
-		<label class="control-label" for="invoices[reminder2]">Second reminder</label>
-		<input class="form-control" name="invoices[reminder2]" type="date" value="<?php e($data['invoices']['reminder2']); ?>" id="invoices[reminder2]" />
-		<span class="help-block"><?php if (isset($errors['invoices[reminder2]'])) e($errors['invoices[reminder2]']); ?></span>
-	</div>
-  
-	<div class="form-group <?php e(isset($errors['invoices[customer_id]'])?'has-error':''); ?>">
-		<label class="control-label" for="invoices[customer_id]">Customer</label>
-		<select class="form-control" name="invoices[customer_id]" id="invoices[customer_id]">
-			<option value=""<?php e(''==$data['invoices']['customer_id']?' selected="selected"':''); ?>></option>
-			<?php foreach ($customers as $key => $value): ?>
-			<option value="<?php e($key); ?>"<?php e($key==$data['invoices']['customer_id']?' selected="selected"':''); ?>><?php e($value); ?></option>
-			<?php endforeach; ?>
-		</select>
-		<span class="help-block"><?php if (isset($errors['invoices[customer_id]'])) e($errors['invoices[customer_id]']); ?></span>
-	</div>
 
+	<?php if($data['invoices']['sent']) { ?>
+		<div class="form-group <?php e(isset($errors['invoices[paid]'])?'has-error':''); ?>">
+			<label class="control-label" for="invoices[paid]">Paid</label>
+			<input class="form-control" name="invoices[paid]" type="checkbox" <?php if($data['invoices']['paid']) e('checked'); ?> id="invoices[paid]" value="1" />
+			<span class="help-block"><?php if (isset($errors['invoices[paid]'])) e($errors['invoices[paid]']); ?></span>
+		</div>
+	
+		<div class="form-group <?php e(isset($errors['invoices[reminder1]'])?'has-error':''); ?>">
+			<label class="control-label" for="invoices[reminder1]">First reminder</label>
+			<input class="form-control" name="invoices[reminder1]" type="date" value="<?php e($data['invoices']['reminder1']); ?>" id="invoices[reminder1]" />
+			<span class="help-block"><?php if (isset($errors['invoices[reminder1]'])) e($errors['invoices[reminder1]']); ?></span>
+		</div>
+	
+		<div class="form-group <?php e(isset($errors['invoices[reminder2]'])?'has-error':''); ?>">
+			<label class="control-label" for="invoices[reminder2]">Second reminder</label>
+			<input class="form-control" name="invoices[reminder2]" type="date" value="<?php e($data['invoices']['reminder2']); ?>" id="invoices[reminder2]" />
+			<span class="help-block"><?php if (isset($errors['invoices[reminder2]'])) e($errors['invoices[reminder2]']); ?></span>
+		</div>
+	<?php } ?>
+
+	<br />
+
+	<table class="table">
+		<thead>
+			<tr>
+				<th class="name" colspan="2">Invoice lines</th>
+			</tr>
+		</thead>
+		<tbody>
+			<?php foreach ($invoicelines as $row): ?>
+			<tr>
+				<td class="name"><span><input name="invoiceline_id[]" type="checkbox" value="<?php e($row['invoicelines']['id']);?>" checked /> &nbsp; <?php e($row['invoicelines']['name']);?></span></td>
+				<td class="money"><span><?php e($row['invoicelines']['subtotal']);?></span></td>
+			</tr>
+			<?php endforeach; ?>
+		</tbody>
+	</table>
+
+	<br /><br />
+  
 	<div class="form-group">
 		<button class="btn btn-primary" type="submit">Save</button>
 	</div>
