--- a/pages/invoices/add(admin).phtml
+++ b/pages/invoices/add(admin).phtml
@@ -61,7 +61,7 @@
 			<select class="form-control" name="invoices[customer_id]" id="invoices[customer_id]">
 				<option value=""></option>
 				<?php foreach ($customers as $customer): ?>
-				<option value="<?php e($customer['customers']['id']); ?>"<?php e($customer['customers']['id']==$data['invoices']['customer_id']?' selected="selected"':''); ?>><?php e($customer['customers']['name']); ?></option>
+				<option value="<?php e($customer['customers']['id']); ?>"><?php e($customer['customers']['name']); ?></option>
 				<?php endforeach; ?>
 			</select>
 			<span class="help-block"><?php if (isset($errors['invoices[customer_id]'])) e($errors['invoices[customer_id]']); ?></span>
