--- a/web/css/default.css
+++ b/web/css/default.css
@@ -87,6 +87,8 @@ pre {font-family: 'Roboto', sans-serif;}
 .card tr th:last-child, .card tr td:last-child span {padding-right: 15px;}
 .card .status {position: relative; margin: 0px auto; max-width: 200px; padding: 15px; text-align: center;}
 .card .status .img {background: #eee url(/img/invoicelion_inverted.png) center top / auto 102% no-repeat; border-radius: 100%; margin: 10px 0; opacity: 0.07; border-radius: 100%; padding-bottom: 100%;}
+.card > div {padding: 20px 25px 10px;}
+.card > div h2 {font-size: 25px; margin-bottom: 20px; line-height: 1em; font-weight: 900; letter-spacing: 0.5px; padding-top: 5px;}
 .default .card > div {padding: 30px 30px 20px 30px;}
 .default .card {background: white; max-width: 420px; margin: 0 auto; position: relative; z-index: 1;}
 
@@ -106,14 +108,15 @@ div + p {padding-top: 15px;}
 
 
 
-.col50 {width: calc(45% - 2px); float: left; margin-bottom: 40px;}
-.col50 + .col50 {margin-left: 5%;}
+.col50 {width: calc(47.5% - 2px); float: left; margin-bottom: 40px;}
+.col50:nth-child(even) {margin-left: 5%;}
 @media (max-width: 1200px) {
     .col50 {float: none; width: auto;}
     .col50 + .col50 {margin-left: 0%;}
     .card {border: 0px solid rgba(0,0,0,0.05); border-radius: 0px; padding: 0px;}
     .card tr th:first-child, .card tr td:first-child span {padding-left: 0px;}
     .card tr th:last-child, .card tr td:last-child span {padding-right: 0px;}
+    .card > div {padding: 0 0 10px;}
 }
 
 
@@ -161,7 +164,7 @@ div + p {padding-top: 15px;}
 
 
 /* form */
-.form-group {max-width: 500px; }
+.form-group, dd {max-width: 500px; }
 .form input {margin-bottom: 1em;}
 input, select, textarea {height: 40px; padding: 0 10px; line-height: 40px; background: none; border: 1px solid #ccc; width: calc(100% - 22px); font-size: 16px; font-family: 'Roboto', sans-serif;}
 label {
@@ -184,7 +187,6 @@ input[type="file"] { border:0; padding:0;}
 .form-group.has-error input,
 .form-group.has-error select,
 .form-group.has-error textarea {border: 1px solid red;}
-
 
 
 
