--- a/pages/tenants/edit(admin).phtml
+++ b/pages/tenants/edit(admin).phtml
@@ -1,21 +1,11 @@
 <?php Buffer::set('title','Settings'); ?>
-<h2>Home</h2>
+<h3><a href="/">Home</a></h3>
 <h1>Edit settings</h1>
 
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
 
-    <div class="form-group <?php e(isset($errors['tenants[hours_active]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[hours_active]">Time tracking</label>
-		<input class="form-control" name="tenants[hours_active]" type="checkbox" value="1" id="tenants[hours_active]" <?php if($data['tenants']['hours_active']) e('checked'); ?> />
-		<span class="help-block"><?php if (isset($errors['tenants[hours_active]'])) e($errors['tenants[hours_active]']); ?></span>
-		</div>
-	
-    <div class="form-group <?php e(isset($errors['tenants[subscriptions_active]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[subscriptions_active]">Subscriptions</label>
-		<input class="form-control" name="tenants[subscriptions_active]" type="checkbox" value="1" id="tenants[subscriptions_active]" <?php if($data['tenants']['subscriptions_active']) e('checked'); ?> />
-		<span class="help-block"><?php if (isset($errors['tenants[subscriptions_active]'])) e($errors['tenants[subscriptions_active]']); ?></span>
-		</div>
+		<h2>Company settings</h2>
 
     <div class="form-group <?php e(isset($errors['tenants[name]'])?'has-error':''); ?>">
 		<label class="control-label" for="tenants[name]">Company name</label>
@@ -94,6 +84,22 @@
 		<input class="form-control" name="tenants[vat_number]" type="text" id="tenants[vat_number]" value="<?php e($data['tenants']['vat_number']); ?>" />
 		<span class="help-block"><?php if (isset($errors['tenants[vat_number]'])) e($errors['tenants[vat_number]']); ?></span>
     </div>
+
+		<h2>General settings</h2>
+
+		<div class="form-group <?php e(isset($errors['tenants[hours_active]'])?'has-error':''); ?>">
+		<label class="control-label" for="tenants[hours_active]">Time tracking</label>
+		<input class="form-control" name="tenants[hours_active]" type="checkbox" value="1" id="tenants[hours_active]" <?php if($data['tenants']['hours_active']) e('checked'); ?> />
+		<span class="help-block"><?php if (isset($errors['tenants[hours_active]'])) e($errors['tenants[hours_active]']); ?></span>
+		</div>
+	
+    <div class="form-group <?php e(isset($errors['tenants[subscriptions_active]'])?'has-error':''); ?>">
+		<label class="control-label" for="tenants[subscriptions_active]">Subscriptions</label>
+		<input class="form-control" name="tenants[subscriptions_active]" type="checkbox" value="1" id="tenants[subscriptions_active]" <?php if($data['tenants']['subscriptions_active']) e('checked'); ?> />
+		<span class="help-block"><?php if (isset($errors['tenants[subscriptions_active]'])) e($errors['tenants[subscriptions_active]']); ?></span>
+		</div>
+
+		<h2>Invoice settings</h2>
     
 		<div class="form-group <?php e(isset($errors['tenants[payment_period]'])?'has-error':''); ?>">
 		<label class="control-label" for="tenants[payment_period]">Payment period (in days)</label>
