--- a/pages/tenants/view(admin).phtml
+++ b/pages/tenants/view(admin).phtml
@@ -100,6 +100,10 @@
                 <?php endforeach; else: e('-'); endif; ?>
             </dd>
         </dl>
+        <dl>
+            <dt>Integrity</dt>
+            <dd><a href="tenants/check">Check</a></dd>
+        </dl>
     </div></div>
 
     <div class="card col50" style="margin-left: 0;"><div>
