--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -33,12 +33,9 @@
           <?php if($tenant['tenants']['hours_active']) {?><a href="hours"><span>Hours</span></a><br /><?php }?>
           <a href="deliveries"><span>Deliveries</span></a><br />
           <?php if($tenant['tenants']['subscriptions_active']) {?><a href="subscriptions"><span>Subscriptions</span></a><br /><?php }?>
-          <a href="invoices"><span>Invoices</span></a><br /> 
-          <a href="invoicelines"><span>Invoicelines</span></a><br />          
+          <a href="invoices"><span>Invoices</span></a><br />        
           <a href="customers"><span>Customers</span></a><br />
-          <a href="projects"><span>Projects</span></a><br />
-          <a href="tenants/view"><span>Settings</span></a><br />
-          <a href="tenants/check"><span>Integrity</span></a><br />
+          <a href="tenants/view"><span>Settings</span></a>
         </div>
 
       </div>
