--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -46,7 +46,7 @@
           <a href="/" title="Dashboard"><img src="/img/icon.svg" /><span>Dashboard</span></a>
           <a href="statistics" title="Statistics"><img src="/img/chart-bar.svg" /><span>Statistics</span></a>
           <a href="hours" title="Hours"><img src="/img/clock.svg" /><span>Hours</span></a>
-          <a href="deliveries" title="Deliveries"><img src="/img/box-usd.svg" /><span>Hours</span></a>
+          <a href="deliveries" title="Deliveries"><img src="/img/box-alt.svg" /><span>Hours</span></a>
           <a href="subscriptions" title="Subscriptions"><img src="/img/repeat.svg" /><span>Subscriptions</span></a>
           <a href="invoices" title="Invoices"><img src="/img/file-invoice-dollar.svg" /><span>Invoices</span></a>
           <a href="tenants/view/<?php e($_SESSION['user']['tenant_id']); ?>" title="Settings"><img src="/img/cog.svg" /><span>Settings</span></a>
