--- a/pages/tenants/view(admin).phtml
+++ b/pages/tenants/view(admin).phtml
@@ -7,8 +7,55 @@
 <br />
 
 <div style="overflow: auto;">
-    <div class="card col50" style="float: right;"><div>
-        <h2>Company settings</h2>
+
+    <h2><a class="toggle_expand">General settings <img src="/img/box.svg" /></a></h2>
+
+    <div class="expand">
+        <dl>
+            <dt>Time tracking</dt>
+            <dd>        
+                <?php if($data['tenants']['hours_active']) e('yes'); else e('no'); ?>
+            </dd>
+        </dl>
+        <dl>
+            <dt>Subscriptions</dt>
+            <dd>        
+                <?php if($data['tenants']['subscriptions_active']) e('yes'); else e('no'); ?>
+            </dd>
+        </dl>
+        <dl>
+            <dt>Projects (<a href="projects/index">manage</a>)</dt>
+            <dd>        
+                <?php if ($projects): foreach ($projects as $row): ?>
+                <a href="projects/view/<?php e($row['projects']['id']); ?>" class="tag"><?php e($row['projects']['name']); ?></a>
+                <?php endforeach; else: e('-'); endif; ?>
+            </dd>
+        </dl>
+        <dl>
+            <dt>Hour types (<a href="hourtypes/index">manage</a>)</dt>
+            <dd>        
+                <?php if ($hourtypes): foreach ($hourtypes as $row): ?>
+                <a href="hourtypes/view/<?php e($row['hourtypes']['id']); ?>" class="tag"><?php e($row['hourtypes']['name']); ?></a>
+                <?php endforeach; else: e('-'); endif; ?>
+            </dd>
+        </dl>
+        <dl>
+            <dt>Subscription types (<a href="subscriptiontypes/index">manage</a>)</dt>
+            <dd>        
+                <?php if ($subscriptiontypes): foreach ($subscriptiontypes as $row): ?>
+                <a href="subscriptiontypes/view/<?php e($row['subscriptiontypes']['id']); ?>" class="tag"><?php e($row['subscriptiontypes']['name']); ?></a>
+                <?php endforeach; else: e('-'); endif; ?>
+            </dd>
+        </dl>
+        <dl>
+            <dt>Integrity</dt>
+            <dd><a href="tenants/check">check</a></dd>
+        </dl>
+    </div>
+
+    <h2><a class="toggle_expand">Company settings <img src="/img/box.svg" /></a></h2>
+
+    <div class="expand">
         <dl>
             <dt>Company name</dt>
             <dd><?php e($data['tenants']['name']?:'-');?></dd>
@@ -61,53 +108,11 @@
             <dt>VAT number</dt>
             <dd><?php e($data['tenants']['vat_number']?:'-');?></dd>
         </dl>
-    </div></div>
-    <div class="card col50" style="margin-left: 0;"><div>
-        <h2>General settings</h2>
-        <dl>
-            <dt>Time tracking</dt>
-            <dd>        
-                <?php if($data['tenants']['hours_active']) e('yes'); else e('no'); ?>
-            </dd>
-        </dl>
-        <dl>
-            <dt>Subscriptions</dt>
-            <dd>        
-                <?php if($data['tenants']['subscriptions_active']) e('yes'); else e('no'); ?>
-            </dd>
-        </dl>
-        <dl>
-            <dt>Projects (<a href="projects/index">manage</a>)</dt>
-            <dd>        
-                <?php if ($projects): foreach ($projects as $row): ?>
-                <a href="projects/view/<?php e($row['projects']['id']); ?>" class="tag"><?php e($row['projects']['name']); ?></a>
-                <?php endforeach; else: e('-'); endif; ?>
-            </dd>
-        </dl>
-        <dl>
-            <dt>Hour types (<a href="hourtypes/index">manage</a>)</dt>
-            <dd>        
-                <?php if ($hourtypes): foreach ($hourtypes as $row): ?>
-                <a href="hourtypes/view/<?php e($row['hourtypes']['id']); ?>" class="tag"><?php e($row['hourtypes']['name']); ?></a>
-                <?php endforeach; else: e('-'); endif; ?>
-            </dd>
-        </dl>
-        <dl>
-            <dt>Subscription types (<a href="subscriptiontypes/index">manage</a>)</dt>
-            <dd>        
-                <?php if ($subscriptiontypes): foreach ($subscriptiontypes as $row): ?>
-                <a href="subscriptiontypes/view/<?php e($row['subscriptiontypes']['id']); ?>" class="tag"><?php e($row['subscriptiontypes']['name']); ?></a>
-                <?php endforeach; else: e('-'); endif; ?>
-            </dd>
-        </dl>
-        <dl>
-            <dt>Integrity</dt>
-            <dd><a href="tenants/check">check</a></dd>
-        </dl>
-    </div></div>
+    </div>
 
-    <div class="card col50" style="margin-left: 0;"><div>
-        <h2>Invoice settings</h2>
+    <h2><a class="toggle_expand">Invoice settings <img src="/img/box.svg" /></a></h2>
+
+    <div class="expand">
         <dl>
             <dt>Payment period (in days)</dt>
             <dd><?php e($data['tenants']['payment_period']?:'-');?></dd>
@@ -136,7 +141,7 @@
             <dt>Invoice page number</dt>
             <dd><?php e(substr($data['tenants']['invoice_page_number']?:'-',0,100));?>...</dd>
         </dl>
-    </div></div>
+    </div>
 </div>
 
 <br />
